<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/barcode"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:src="@drawable/teama" />

            <TextView
                android:layout_width="match_parent"
                android:id="@+id/team_A_score"
                android:layout_height="match_parent"
                android:text="@string/scoreA"
                android:background="@color/background"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/White"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:textSize="23dp"
                android:background="@color/background"/>


        </LinearLayout>
        <TextView
            android:layout_width="56dp"
            android:layout_height="100dp"
            android:text="@string/minus"
            android:background="@color/background"
            android:textSize="40sp"
            android:textColor="@color/White"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:orientation="horizontal">


            <TextView
                android:layout_width="100dp"
                android:id="@+id/team_b_score"
                android:layout_height="match_parent"
                android:background="@color/background"
                android:text="@string/scoreB"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/White"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:src="@drawable/teamb" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:gravity="center"
                android:text="@string/teamA"
                android:textAllCaps="true"
                android:textColor="@color/teamA"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background"
                android:gravity="center"
                android:text="@string/teamB"
                android:textAllCaps="true"
                android:textColor="@color/teamB"
                android:textSize="20sp" />


        </LinearLayout>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/barcode"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn3fora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/teamA"
                android:text="@string/addthree" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/teamA"
                android:id="@+id/btn2fora"
                android:text="@string/addtwo" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/teamA"
                android:id="@+id/btn1fora"
                android:text="@string/free" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/White"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn3forb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/teamB"
                android:text="@string/addthree" />

            <Button
                android:id="@+id/btn2forb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/teamB"
                android:text="@string/addtwo" />

            <Button
                android:id="@+id/btn1forb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/teamB"
                android:text="@string/free" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="48dp">

        <Button
            android:layout_width="wrap_content"
            android:id="@+id/btnreset"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:text="@string/reset" />

    </LinearLayout>


</LinearLayout>








